--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,14 +21,13 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: zhouzhou@cityu.edu.hk
-phone: 888 888 88 88
+phone: :+852-69167860 
 address:
   street: 450 Serra Mall
   city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
+  region: Kowloon
+  postcode:
+  country: Hong Kong
 coordinates:
   latitude: '37.4275'
   longitude: '-122.1697'
