--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -25,7 +25,7 @@ phone: +852-69167860
 address:
   street: 6-281, Lau Ming Wai Academic Building
   city: Tat Chee Avenue
-  region: Kowloon
+  region: Kowloon, 
   postcode: Hong Kong
   country: 
 coordinates:
